fixed more options spacing

--- a/src/index.css
+++ b/src/index.css
@@ -11,12 +11,17 @@
 .more-options {
   text-align: right;
 }
+
 .lists {
   width: 450px;
   background:#ccc;
   border:4px solid lightblue;
   margin:0 auto;
   margin-top:40px;
+}
+
+.project-name {
+  width:370px;
 }
 
 .list-item {
